[package]
name = "usthing-backend-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
