[package]
name = "usthing-backend-test"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.40", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
anyhow = "1.0"
chrono = "0.4"
